Fix issue with header & quote alignment

--- a/style.css
+++ b/style.css
@@ -1,68 +1,76 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;900&display=swap");
 
 body {
-  margin: 0;
   height: 100vh;
   font-family: "Roboto", sans-serif;
   background-color: #1f2937;
 }
 
-.main {
-  display: flex;
-  flex-direction: column;
+* {
+  border: 2px solid tomato;
+  margin: 0;
 }
 
-/* Header Logo */
+/* Header */
+
+header {
+  padding: 1em 13em;
+}
+
+/* LOGO & NAVIGATION */
 
 .header {
   display: flex;
-  justify-content: space-around;
-  padding: 16px;
+  justify-content: space-between;
   color: #f9faf8;
-  margin-bottom: 50px;
 }
 
 .header .logo {
   font-weight: 900;
-  font-size: 20px;
+  font-size: 24px;
 }
 
 ul {
   list-style: none;
   display: flex;
-  gap: 16px;
+  gap: 1.5em;
   margin: 0;
   padding: 0;
 }
 
 a {
+  font-size: 18px;
   text-decoration: none;
-  color: #f9faf8;
+  color: #e5e7eb;
 }
 
-.left,
+/* .left,
 .right {
   display: flex;
   align-items: center;
   gap: 16px;
-}
+} */
 
 /* Header Top */
 
 .container-top {
-  flex: 1;
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 16px;
-  margin-bottom: 100px;
+  gap: 2em;
+  padding: 7em 0;
 }
 
-.info {
+.container-top .left {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  width: 450px;
+  gap: 10px;
+  color: #E5E7EB;
+}
+
+.container-top .right {
+  flex-shrink: 0;
+  width: 50%;
 }
 
 .textTop {
@@ -71,32 +79,24 @@ a {
   color: #f9faf8;
 }
 
-.info p {
-  font-size: 18px;
-  color: #e5e7eb;
-}
-
 button {
-  padding: 8px 30px;
+  padding: 8px 1em;
+  width: 120px;
   border-radius: 8px;
+  background-color: #3882f6;
 }
 
-button.signUp {
-  background-color: #3882f6;
-  color: white;
-  border: 1px solid #3882f6;
-  font-weight: bold;
-  font-size: 16px;
+.container-top button {
+  border: none;
+  color: #f9faf8;
 }
 
 .placeholder {
   display: flex;
-  flex-shrink: 0;
   background-color: gray;
   color: #f9faf8;
   justify-content: center;
   align-items: center;
-  width: 400px;
   height: 220px;
 }
 
@@ -141,16 +141,28 @@ button.signUp {
 /* Quote Section */
 
 .container-quote {
-  height: 400px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
   background-color: #e5e7eb;
-  padding: 20px;
+  padding: 7em 13em;
 }
 
-.quote {
+.container-quote em {
+  font-size: 36px;
+  font-weight: 100;
+  color: #1f2937;
+}
+
+.container-quote p {
+  align-self: flex-end;
+  font-weight: bolder;
+  font-size: 24px;
+  color: #1f2937;
+  margin: 0;
+}
+
+/* .quote {
   font-size: 36px;
   font-weight: 300;
   font-style: italic;
@@ -158,8 +170,9 @@ button.signUp {
 }
 
 .author {
+  align-self: flex-end;
   font-weight: 600;
-}
+} */
 
 /* Bottom Sign up Section */
 
